frontend/tests/cases/negative/tyMismatchInstanceMethodNotUnifiableWithInterfaceSig.gr
interface Simple a where
  simple : a -> a

data A = A

-- the instance requires that 'simple : A -> A',
-- but we provide a function of type 'simple : A'
instance Simple A where
  simple = A
